- patches.fixes/block-blk_abort_request-lock-fix: libata/SCSI:   fix locking around blk_abort_request() (bnc#585927).

--- a/series.conf
+++ b/series.conf
@@ -460,6 +460,8 @@
 	# Storage
 	########################################################
 
+	patches.fixes/block-blk_abort_request-lock-fix
+
 	# libata
 	patches.drivers/libata-add-waits-for-govault
 	patches.drivers/libata-unlock-hpa-by-default
