- Update Xen patches to 2.6.34-rc4 and c/s 1011. - patches.xen/xen-netfront-ethtool: netfront: ethtool -i does   not return info about xennet driver (bnc#591179). - patches.xen/xen-no-reboot-vector: eliminate REBOOT_VECTOR. - patches.xen/xen-x86_64-kern_addr_valid: x86-64:   kern_addr_valid() must not walk page tables mapping hypervisor   space (bnc#591371). - Update Xen config files. - supported.conf: drivers/xen/evtchn.ko is supported.

--- a/series.conf
+++ b/series.conf
@@ -819,6 +819,8 @@
 	patches.xen/xen3-patch-2.6.32
 	patches.xen/xen3-patch-2.6.33
 	patches.xen/xen3-patch-2.6.34-rc2
+	patches.xen/xen3-patch-2.6.34-rc2-rc3
+	patches.xen/xen3-patch-2.6.34-rc3-rc4
 	patches.xen/xen3-seccomp-disable-tsc-option
 	patches.xen/xen3-x86-mcp51-no-dac
 	patches.xen/xen3-x86-mark_rodata_rw.patch
@@ -844,6 +846,7 @@
 	patches.xen/xen-ipi-per-cpu-irq
 	patches.xen/xen-virq-per-cpu-irq
 	patches.xen/xen-clockevents
+	patches.xen/xen-no-reboot-vector
 	patches.xen/xen-spinlock-poll-early
 	patches.xen/xen-configurable-guest-devices
 	patches.xen/xen-netback-nr-irqs
@@ -851,9 +854,8 @@
 	patches.xen/xen-netback-generalize
 	patches.xen/xen-netback-multiple-tasklets
 	patches.xen/xen-netback-kernel-threads
+	patches.xen/xen-netfront-ethtool
 	patches.xen/xen-unpriv-build
-	patches.xen/xen-vusb-module-alias
-	patches.xen/xen-vscsi-module-alias
 	patches.xen/xen-floppy
 	patches.xen/xen-dcdbas
 	patches.xen/xen-x86-panic-no-reboot
@@ -869,3 +871,4 @@
 	patches.xen/xen-x86_64-pgd-alloc-order
 	patches.xen/xen-x86_64-dump-user-pgt
 	patches.xen/xen-x86_64-note-init-p2m
+	patches.xen/xen-x86_64-kern_addr_valid
