--- a/supported.conf
+++ b/supported.conf
@@ -2040,6 +2040,7 @@
 		kernel/drivers/xen/blktap/blktap
 -		kernel/drivers/xen/blktap2/blktap2
 		kernel/drivers/xen/core/domctl
+		kernel/drivers/xen/evtchn
 		kernel/drivers/xen/gntdev/gntdev
 		kernel/drivers/xen/netback/netbk			# Xen network device backend
 		kernel/drivers/xen/netback/netloop			# Xen network loopback device
