- Update to  2.6.34-rc5.   - Eliminated 1 patch.

--- a/series.conf
+++ b/series.conf
@@ -31,6 +31,7 @@
 	patches.kernel.org/patch-2.6.34-rc1-rc2
 	patches.kernel.org/patch-2.6.34-rc2-rc3
 	patches.kernel.org/patch-2.6.34-rc3-rc4
+	patches.kernel.org/patch-2.6.34-rc4-rc5
 
         ########################################################
         # Build fixes that apply to the vanilla kernel too.
@@ -107,8 +108,6 @@
 
 	patches.fixes/make-note_interrupt-fast.diff
 	patches.fixes/twl6030-fix-note_interrupt-call
-	patches.fixes/hibernation-fix-s2disk.patch
-
 
         ########################################################
         # Architecture-specific patches. These used to be all
