- rpm/kernel-*.spec.in: Provide %name = %version-%source_rel in   all spec files (bnc#598453).

--- a/rpm/kernel-binary.spec.in
+++ b/rpm/kernel-binary.spec.in
@@ -69,6 +69,7 @@ BuildRequires:  coreutils module-init-tools sparse
 BuildRequires:  fdupes
 Provides:       multiversion(kernel)
 Provides:       %{name}_%_target_cpu = %version-%release
+Provides:       %name = %version-%source_rel
 %if %split_base
 Provides:       kernel-base = %version-%source_rel
 # Obsolete the -base subpackage from 11.1 and 11.2 development phase
