--- a/rpm/kernel-docs.spec.in
+++ b/rpm/kernel-docs.spec.in
@@ -34,6 +34,7 @@ Release:        @RELEASE_PREFIX@<RELEASE>
 %else
 Release:        @RELEASE_PREFIX@0
 %endif
+Provides:       %name = %version-%source_rel
 Summary:        Kernel Documentation
 BuildArch:      noarch
 BuildRoot:      %{_tmppath}/%{name}-%{version}-build
