--- a/rpm/kernel-syms.spec.in
+++ b/rpm/kernel-syms.spec.in
@@ -37,6 +37,7 @@ AutoReqProv:    off
 BuildRequires:  coreutils
 @REQUIRES@
 Provides:       multiversion(kernel)
+Provides:       %name = %version-%source_rel
 Source:         README.KSYMS
 Requires:       kernel-devel%variant = %version-%source_rel
 BuildRoot:      %{_tmppath}/%{name}-%{version}-build
