- patches.fixes/hp-wmi_detect_keys.patch: x86 platform drivers:   hp-wmi Reorder event id processing (bnc#598059). - patches.fixes/hp_wmi_catch_unkown_event_key_codes.patch: x86   platform drivers: hp-wmi Catch and log unkown event and key   codes correctly (bnc#598059). - patches.fixes/hp_wmi_use_prefix_string.patch: x86 platform   drivers: hp-wmi Use consistent prefix string for messages   (bnc#598059).

--- a/series.conf
+++ b/series.conf
@@ -280,6 +280,10 @@
 	patches.arch/acpi_srat-pxm-rev-ia64.patch
 	patches.arch/acpi_srat-pxm-rev-x86-64.patch
 
+	# HP WMI patches
+	patches.fixes/hp-wmi_detect_keys.patch
+	patches.fixes/hp_wmi_catch_unkown_event_key_codes.patch
+	patches.fixes/hp_wmi_use_prefix_string.patch
 	########################################################
 	# CPUFREQ
 	########################################################
