--- a/series.conf
+++ b/series.conf
@@ -284,6 +284,7 @@
 	patches.fixes/hp-wmi_detect_keys.patch
 	patches.fixes/hp_wmi_catch_unkown_event_key_codes.patch
 	patches.fixes/hp_wmi_use_prefix_string.patch
+	patches.fixes/hp_wmi_add_media_key.patch
 	########################################################
 	# CPUFREQ
 	########################################################
