- patches.fixes/acpi-cpufreq_fix_cpu_any_notification.patch:   acpi-cpufreq: Fix CPU_ANY CPUFREQ_{PRE,POST}CHANGE notification   (none). - patches.trace/x86_cpufreq_make_trace_power_frequency_cpufreq_driver_independent.patch:   x86 cpufreq: Make trace_power_frequency cpufreq driver   independent (none).

--- a/series.conf
+++ b/series.conf
@@ -301,6 +301,8 @@
 #	patches.suse/cpuidle-documentation
 	patches.fixes/cpufreq_ondemand_performance_optimise_default_settings.patch
 
+	patches.fixes/acpi-cpufreq_fix_cpu_any_notification.patch	
+
 	########################################################
 	# AGP, graphics related stuff
 	########################################################
@@ -718,6 +720,8 @@
 	patches.fixes/oprofile_bios_ctr.patch
 
 	patches.trace/utrace-core
+
+	patches.trace/x86_cpufreq_make_trace_power_frequency_cpufreq_driver_independent.patch
 
 +needs_update-32	patches.fixes/nfs-write.c-bug-removal.patch
 	patches.fixes/ia64-configure-HAVE_UNSTABLE_SCHED_CLOCK-for-SGI_SN.patch
