- patches.xen/xen-fix_trace_power.patch: x86 cpufreq: Make   trace_power_frequency cpufreq driver independent (none).

--- a/series.conf
+++ b/series.conf
@@ -884,3 +884,5 @@
 	patches.xen/xen-x86_64-dump-user-pgt
 	patches.xen/xen-x86_64-note-init-p2m
 	patches.xen/xen-x86_64-kern_addr_valid
+
+	patches.xen/xen-fix_trace_power.patch
