- Update to 2.6.34-rc5-git8.   - Eliminated 1 patch.

--- a/series.conf
+++ b/series.conf
@@ -32,6 +32,7 @@
 	patches.kernel.org/patch-2.6.34-rc2-rc3
 	patches.kernel.org/patch-2.6.34-rc3-rc4
 	patches.kernel.org/patch-2.6.34-rc4-rc5
+	patches.kernel.org/patch-2.6.34-rc5-git8
 
         ########################################################
         # Build fixes that apply to the vanilla kernel too.
@@ -353,7 +354,6 @@
 	########################################################
 	patches.suse/reiserfs-barrier-default
 	patches.fixes/reiserfs-remove-2-tb-file-size-limit
-	patches.fixes/reiserfs-fix-permissions-on-reiserfs_priv
 
 	########################################################
 	# dlm
