- Update Xen patches to 2.6.34-rc5-git8 and c/s 1016. - Update Xen config files. - patches.xen/xen-kzalloc: use kzalloc() in favor of   kmalloc()+memset(). - patches.xen/xen-fix_trace_power.patch: Rename to ... - patches.xen/xen3-x86_cpufreq_make_trace_power_frequency_cpufreq_driver_independent.patch:   ... this.

--- a/series.conf
+++ b/series.conf
@@ -833,12 +833,14 @@
 	patches.xen/xen3-patch-2.6.34-rc2
 	patches.xen/xen3-patch-2.6.34-rc2-rc3
 	patches.xen/xen3-patch-2.6.34-rc3-rc4
+	patches.xen/xen3-patch-2.6.34-rc5-git8
 	patches.xen/xen3-seccomp-disable-tsc-option
 	patches.xen/xen3-x86-mcp51-no-dac
 	patches.xen/xen3-x86-mark_rodata_rw.patch
 	patches.xen/xen3-kdb-x86
 	patches.xen/xen3-stack-unwind
 	patches.xen/xen3-x86_64-unwind-annotations
+	patches.xen/xen3-x86_cpufreq_make_trace_power_frequency_cpufreq_driver_independent.patch
 
 	# bugfixes and enhancements
 	patches.xen/xen-balloon-max-target
@@ -867,9 +869,10 @@
 	patches.xen/xen-netback-multiple-tasklets
 	patches.xen/xen-netback-kernel-threads
 	patches.xen/xen-netfront-ethtool
-	patches.xen/xen-unpriv-build
-	patches.xen/xen-floppy
 	patches.xen/xen-dcdbas
+	patches.xen/xen-floppy
+	patches.xen/xen-kzalloc
+	patches.xen/xen-unpriv-build
 	patches.xen/xen-x86-panic-no-reboot
 	patches.xen/xen-x86-dcr-fallback
 	patches.xen/xen-x86-consistent-nmi
@@ -883,6 +886,3 @@
 	patches.xen/xen-x86_64-pgd-alloc-order
 	patches.xen/xen-x86_64-dump-user-pgt
 	patches.xen/xen-x86_64-note-init-p2m
-	patches.xen/xen-x86_64-kern_addr_valid
-
-	patches.xen/xen-fix_trace_power.patch
