- patches.fixes/acpi_ensure_spec_correct_address_space_length.patch:   ACPI/x86/PCI: compute Address Space length rather than using   _LEN (bnc#598641).

--- a/series.conf
+++ b/series.conf
@@ -286,6 +286,8 @@
 	patches.fixes/hp_wmi_catch_unkown_event_key_codes.patch
 	patches.fixes/hp_wmi_use_prefix_string.patch
 	patches.fixes/hp_wmi_add_media_key.patch
+
+	patches.fixes/acpi_ensure_spec_correct_address_space_length.patch
 	########################################################
 	# CPUFREQ
 	########################################################
