- patches.fixes/cifs-fix-oops-due-to-null-nameidata: Allow null nd   (as nfs server uses) on create (bnc#593940).

--- a/series.conf
+++ b/series.conf
@@ -341,6 +341,7 @@
 	########################################################
 	# cifs patches
 	########################################################
+	patches.fixes/cifs-fix-oops-due-to-null-nameidata
 
 	########################################################
 	# ext2/ext3
