- Update to 2.6.34-rc6.   - Eliminated 2 patches.

--- a/series.conf
+++ b/series.conf
@@ -32,7 +32,7 @@
 	patches.kernel.org/patch-2.6.34-rc2-rc3
 	patches.kernel.org/patch-2.6.34-rc3-rc4
 	patches.kernel.org/patch-2.6.34-rc4-rc5
-	patches.kernel.org/patch-2.6.34-rc5-git8
+	patches.kernel.org/patch-2.6.34-rc5-rc6
 
         ########################################################
         # Build fixes that apply to the vanilla kernel too.
@@ -153,7 +153,6 @@
 
 	patches.suse/x86-mark_rodata_rw.patch
 	patches.fixes/dmar-fix-oops-with-no-dmar-table
-	patches.fixes/x86-apbt-conditionally-register-cpu-hp-notifier-for-apbt
 
 	########################################################
 	# x86 MCE/MCA (Machine Check Error/Architecture) extensions
@@ -287,7 +286,6 @@
 	patches.fixes/hp_wmi_use_prefix_string.patch
 	patches.fixes/hp_wmi_add_media_key.patch
 
-	patches.fixes/acpi_ensure_spec_correct_address_space_length.patch
 	########################################################
 	# CPUFREQ
 	########################################################
