--- a/series.conf
+++ b/series.conf
@@ -33,6 +33,7 @@
 	patches.kernel.org/patch-2.6.34-rc3-rc4
 	patches.kernel.org/patch-2.6.34-rc4-rc5
 	patches.kernel.org/patch-2.6.34-rc5-rc6
+	patches.kernel.org/patch-2.6.34-rc6-rc7
 
         ########################################################
         # Build fixes that apply to the vanilla kernel too.
@@ -470,8 +471,6 @@
 	# Storage
 	########################################################
 
-	patches.fixes/block-blk_abort_request-lock-fix
-
 	# libata
 	patches.drivers/libata-add-waits-for-govault
 	patches.drivers/libata-unlock-hpa-by-default
@@ -503,7 +502,6 @@
 	patches.fixes/sd_liberal_28_sense_invalid.diff
 
 	patches.fixes/scsi-ibmvscsi-module_alias.patch
-	patches.fixes/scsi_debug-scale-virtual_gb-with-sector_size-properly
 
 	########################################################
 	# DRM/Video
@@ -564,7 +562,6 @@
 	patches.suse/bootsplash-console-fix
 	patches.drivers/elousb.patch
 	patches.fixes/input-add-acer-aspire-5710-to-nomux.patch
-	patches.drivers/input-Add-support-of-Synaptics-Clickpad-device
 	patches.drivers/input-Add-LED-support-to-Synaptics-device
 
 	##########################################################
