--- a/series.conf
+++ b/series.conf
@@ -831,7 +831,8 @@
 	patches.xen/xen3-patch-2.6.34-rc2
 	patches.xen/xen3-patch-2.6.34-rc2-rc3
 	patches.xen/xen3-patch-2.6.34-rc3-rc4
-	patches.xen/xen3-patch-2.6.34-rc5-git8
+	patches.xen/xen3-patch-2.6.34-rc5-rc6
+	patches.xen/xen3-patch-2.6.34-rc6-rc7
 	patches.xen/xen3-seccomp-disable-tsc-option
 	patches.xen/xen3-x86-mcp51-no-dac
 	patches.xen/xen3-x86-mark_rodata_rw.patch
