- rpm/kernel-binary.spec.in: Fix preserving of old symsets.

--- a/rpm/kernel-binary.spec.in
+++ b/rpm/kernel-binary.spec.in
@@ -565,10 +565,10 @@ if [ %CONFIG_MODULES = y ]; then
         fi > "$f-br"
     done
     reference=
-    if test -e %my_builddir/kabi/$cpu_arch/symsets-@FLAVOR@.tar.gz; then
-        tar xzf %my_builddir/kabi/$cpu_arch/symsets-@FLAVOR@.tar.gz -C \
-	    %my_builddir/kabi/$cpu_arch
-        reference="--reference %my_builddir/kabi/$cpu_arch/symsets-*-@FLAVOR@/"
+    if test -e %my_builddir/kabi/%cpu_arch/symsets-@FLAVOR@.tar.gz; then
+        tar xzf %my_builddir/kabi/%cpu_arch/symsets-@FLAVOR@.tar.gz -C \
+	    %my_builddir/kabi/%cpu_arch
+        reference="--reference %my_builddir/kabi/%cpu_arch/symsets-*-@FLAVOR@/"
     fi
     %_sourcedir/symsets.pl --generate-symsets \
         $reference \
