- patches.fixes/acpi_processor_check_maxcpus.patch: Do not try   to set up acpi processor stuff on cores exceeding maxcpus=   (bnc#601520).

--- a/series.conf
+++ b/series.conf
@@ -280,6 +280,8 @@
 	patches.fixes/hp_wmi_use_prefix_string.patch
 	patches.fixes/hp_wmi_add_media_key.patch
 
+	patches.fixes/acpi_processor_check_maxcpus.patch
+
 	########################################################
 	# CPUFREQ
 	########################################################
