- patches.drivers/pci-disable-msi-on-K8M800: pci: disable MSI   on VIA K8M800 (bnc#599508).

--- a/series.conf
+++ b/series.conf
@@ -534,6 +534,7 @@
 	########################################################
 	# PCI and PCI hotplug
 	########################################################
+	patches.drivers/pci-disable-msi-on-K8M800
 
 	########################################################
 	# sysfs / driver core
