- patches.suse/b43-missing-firmware-info.patch: b43: Change   firmware missing message to refer to openSUSE script.

--- a/series.conf
+++ b/series.conf
@@ -526,6 +526,7 @@
 	# Wireless Networking
 	########################################################
 	patches.suse/wireless-no-aes-select
+	patches.suse/b43-missing-firmware-info.patch
 
 	########################################################
 	# iSCSI
