- patches.arch/powernow-k8-add-core-performance-boost-support:   powernow-k8: Add core performance boost support (bnc#602209). - patches.arch/x86-cpu-add-amd-core-boosting-feature-flag-to-proc-cpuinfo:   x86, cpu: Add AMD core boosting feature flag to /proc/cpuinfo. - patches.arch/x86-cpufreq-add-aperf-mperf-support-for-amd-processors:   x86, cpufreq: Add APERF/MPERF support for AMD processors   (bnc#602209).

--- a/series.conf
+++ b/series.conf
@@ -298,7 +298,10 @@
 #	patches.suse/cpuidle-documentation
 	patches.fixes/cpufreq_ondemand_performance_optimise_default_settings.patch
 
-	patches.fixes/acpi-cpufreq_fix_cpu_any_notification.patch	
+	patches.fixes/acpi-cpufreq_fix_cpu_any_notification.patch
+	patches.arch/x86-cpu-add-amd-core-boosting-feature-flag-to-proc-cpuinfo
+	patches.arch/powernow-k8-add-core-performance-boost-support
+	patches.arch/x86-cpufreq-add-aperf-mperf-support-for-amd-processors
 
 	########################################################
 	# AGP, graphics related stuff
