- supported.conf: Added mperf, which powernow and acpi-cpufreq now   depend on.

--- a/supported.conf
+++ b/supported.conf
@@ -56,6 +56,7 @@
 -		kernel/arch/x86/kernel/cpu/cpufreq/gx-suspmod
 -		kernel/arch/x86/kernel/cpu/cpufreq/longhaul
 -		kernel/arch/x86/kernel/cpu/cpufreq/longrun
+		kernel/arch/x86/kernel/cpu/cpufreq/mperf
 -		kernel/arch/x86/kernel/cpu/cpufreq/p4-clockmod
 -		kernel/arch/x86/kernel/cpu/cpufreq/powernow-k6
 -		kernel/arch/x86/kernel/cpu/cpufreq/powernow-k7
