- patches.drivers/driver-core-add-devname-module-aliases-to-allow-module-on-demand-auto-loading.patch:   driver core: add devname module aliases to allow module   on-demand auto-loading.

--- a/series.conf
+++ b/series.conf
@@ -543,6 +543,7 @@
 	########################################################
 	# sysfs / driver core
 	########################################################
+	patches.drivers/driver-core-add-devname-module-aliases-to-allow-module-on-demand-auto-loading.patch
 
 	########################################################
 	# USB
