- rpm/kernel-docs.spec.in: Fix for -rt.

--- a/rpm/kernel-docs.spec.in
+++ b/rpm/kernel-docs.spec.in
@@ -18,12 +18,13 @@
 # norootforbuild
 
 %define patchversion @PATCHVERSION@
+%define variant @VARIANT@%{nil}
 
 %include %_sourcedir/kernel-spec-macros
 
-Name:           kernel-docs
+Name:           kernel-docs@VARIANT@
 BuildRequires:  docbook-toys docbook-utils ghostscript_any libjpeg-devel texlive transfig xmlto xorg-x11-devel
-BuildRequires:  kernel-source = @RPMVERSION@
+BuildRequires:  kernel-source%variant = @RPMVERSION@
 Url:            http://www.kernel.org/
 License:        GPL v2 or later
 Group:          Documentation/Man
