- rpm/kernel-source.spec.in: pcre-tools is not needed.

--- a/rpm/kernel-source.spec.in
+++ b/rpm/kernel-source.spec.in
@@ -41,7 +41,7 @@ Group:          Development/Sources
 Url:            http://www.kernel.org/
 AutoReqProv:    off
 BuildRequires:  coreutils sed
-BuildRequires:  fdupes pcre-tools
+BuildRequires:  fdupes
 Requires(post): coreutils sed
 Provides:       multiversion(kernel)
 Provides:       linux
