- Update to 2.6.35-rc1.   - Eliminated 13 patches.   - Xen is disabled.

--- a/series.conf
+++ b/series.conf
@@ -27,6 +27,7 @@
 	# DO NOT MODIFY THEM!
 	# Send separate patches upstream if you find a problem...
 	########################################################
+	patches.kernel.org/patch-2.6.35-rc1
 
         ########################################################
         # Build fixes that apply to the vanilla kernel too.
@@ -36,7 +37,6 @@
 	patches.rpmify/tioca-fix-assignment-from-incompatible-pointer-warnings
 	patches.rpmify/ia64-mca-fix-cast-from-integer-to-pointer-warning
 
-	patches.rpmify/dmar-fix-section-mismatch
 	patches.rpmify/ppc-crashdump-typefix
 	patches.rpmify/powerpc-kvm-build-failure-workaround
 
@@ -146,7 +146,6 @@
 	patches.arch/kvm-replace-kvm-io-delay-pv-ops-with-linux-magic
 
 	patches.suse/x86-mark_rodata_rw.patch
-	patches.fixes/dmar-fix-oops-with-no-dmar-table
 
 	########################################################
 	# x86 MCE/MCA (Machine Check Error/Architecture) extensions
@@ -166,8 +165,6 @@
 	########################################################
 	# x86 UV patches from SGI
 	########################################################
-	# bug 566745
-	patches.arch/UV-Expose-irq_desc-node-in-proc.patch
 
         ########################################################
 	# x86_64/i386 depending on the UV patchset
@@ -176,13 +173,11 @@
         ########################################################
 	# powerpc/generic
         ########################################################
-	patches.suse/of_platform_driver.module-owner.patch
 	patches.suse/led_classdev.sysfs-name.patch
 	patches.suse/radeon-monitor-jsxx-quirk.patch
 
 	patches.suse/8250-sysrq-ctrl_o.patch
 	patches.suse/ppc-no-LDFLAGS_MODULE.patch
-	patches.arch/ppc-vio-modalias.patch
 	patches.arch/ppc-pegasos-console-autodetection.patch
 	patches.suse/ppc-powerbook-usb-fn-key-default.patch
 	patches.drivers/ppc64-adb
@@ -192,7 +187,6 @@
 	patches.fixes/ptrace-getsiginfo
 	patches.arch/ppc-ipic-suspend-without-83xx-fix
 	patches.arch/ppc-vmcoreinfo.diff
-	patches.fixes/powerpc-fix-handling-of-strnlen-with-zero-len
 
         ########################################################
         # PS3
@@ -299,9 +293,6 @@
 	patches.fixes/cpufreq_ondemand_performance_optimise_default_settings.patch
 
 	patches.fixes/acpi-cpufreq_fix_cpu_any_notification.patch
-	patches.arch/x86-cpu-add-amd-core-boosting-feature-flag-to-proc-cpuinfo
-	patches.arch/powernow-k8-add-core-performance-boost-support
-	patches.arch/x86-cpufreq-add-aperf-mperf-support-for-amd-processors
 
 	########################################################
 	# AGP, graphics related stuff
@@ -326,10 +317,10 @@
 	########################################################
 	patches.fixes/nfs-slot-table-alloc
 
-	patches.fixes/nfsd-05-sunrpc-cache-allow-thread-to-block-while-waiting-for.patch
++needs_update-35	patches.fixes/nfsd-05-sunrpc-cache-allow-thread-to-block-while-waiting-for.patch
 	patches.fixes/nfsd-06-sunrpc-cache-retry-cache-lookups-that-return-ETIMEDO.patch
 	patches.fixes/nfsd-07-nfsd-idmap-drop-special-request-deferal-in-favour-of.patch
-	patches.fixes/sunrpc-monotonic-expiry
++needs_update-35	patches.fixes/sunrpc-monotonic-expiry
 
 	########################################################
 	# lockd + statd
@@ -338,7 +329,6 @@
 	########################################################
 	# cifs patches
 	########################################################
-	patches.fixes/cifs-fix-oops-due-to-null-nameidata
 
 	########################################################
 	# ext2/ext3
@@ -365,8 +355,6 @@
 	# ocfs2
 	########################################################
 
-	patches.suse/ocfs2-allocation-resrvations.patch
-
 	########################################################
 	# gfs2 read-only support for migration
 	########################################################
@@ -383,6 +371,7 @@
 	patches.fixes/xfs-dmapi-fixes
 	patches.fixes/xfs-export-debug
 	patches.suse/xfs-dmapi-2-6-34-api-changes
+	patches.suse/xfs-dmapi-2.6.35-api-changes
 	patches.suse/xfs-dmapi-fix-incompatible-pointer-type-warning
 
 	########################################################
@@ -390,6 +379,7 @@
 	########################################################
 	patches.suse/novfs-client-module
 	patches.suse/novfs-fix-debug-message.patch
+	patches.suse/novfs-2.6.35-api-changes
 	patches.fixes/novfs-err_ptr-fix.diff
 	patches.fixes/novfs-fix-inode-uid
 	patches.fixes/novfs-incorrect-filesize-fix
@@ -470,7 +460,6 @@
 	########################################################
 
 	# libata
-	patches.drivers/libata-add-waits-for-govault
 	patches.drivers/libata-unlock-hpa-by-default
 
 	# Block layer fixes
@@ -487,7 +476,7 @@
 
 	patches.fixes/scsi-check-host-lookup-failure
 	patches.drivers/megaraid-mbox-fix-SG_IO
-	patches.drivers/qla4xxx-5.01.00-k9-5.01.00.00.11.01-k10.patch
++needs_update-35	patches.drivers/qla4xxx-5.01.00-k9-5.01.00.00.11.01-k10.patch
 
 	# Remaining SCSI patches (garloff)
 	patches.suse/scsi-error-test-unit-ready-timeout
@@ -543,7 +532,6 @@
 	########################################################
 	# sysfs / driver core
 	########################################################
-	patches.drivers/driver-core-add-devname-module-aliases-to-allow-module-on-demand-auto-loading.patch
 
 	########################################################
 	# USB
@@ -562,6 +550,7 @@
 	patches.suse/bootsplash-scaler
 	patches.suse/bootsplash-console-fix
 	patches.drivers/elousb.patch
+	patches.suse/elousb-2.6.35-api-changes
 	patches.fixes/input-add-acer-aspire-5710-to-nomux.patch
 	patches.drivers/input-Add-LED-support-to-Synaptics-device
 
@@ -676,18 +665,18 @@
         # KDB v4.4
         ########################################################
 
-	patches.suse/kdb-common
-	patches.suse/kdb-x86
-	patches.suse/kdb-ia64
-	patches.suse/kdb-build-fixes
-	patches.suse/kdb-x86-build-fixes
-	patches.suse/kdb-usb-rework
-	patches.suse/kdb_fix_ia64_build.patch
-	patches.suse/kdb_dont_touch_i8042_early.patch
-	patches.suse/kdb-fix-assignment-from-incompatible-pointer-warnings
-	patches.suse/kdb-handle-nonexistance-keyboard-controller
-	patches.suse/kdb-fix-kdb_cmds-to-include-the-arch-common-macro
-	patches.suse/kdb-vm-api-changes-for-2-6-34
+#	patches.suse/kdb-common
+#	patches.suse/kdb-x86
+#	patches.suse/kdb-ia64
+#	patches.suse/kdb-build-fixes
+#	patches.suse/kdb-x86-build-fixes
+#	patches.suse/kdb-usb-rework
+#	patches.suse/kdb_fix_ia64_build.patch
+#	patches.suse/kdb_dont_touch_i8042_early.patch
+#	patches.suse/kdb-fix-assignment-from-incompatible-pointer-warnings
+#	patches.suse/kdb-handle-nonexistance-keyboard-controller
+#	patches.suse/kdb-fix-kdb_cmds-to-include-the-arch-common-macro
+#	patches.suse/kdb-vm-api-changes-for-2-6-34
 
         ########################################################
         # Other patches for debugging
@@ -783,103 +772,103 @@
 +needs_update-33	patches.xen/sfc-resource-driver
 +needs_update-33	patches.xen/sfc-driverlink-conditional
 +needs_update-33	patches.xen/sfc-external-sram
-	patches.xen/tmem
-
-	# bulk stuff, new files for xen
-	patches.xen/xen3-auto-xen-arch.diff
-	patches.xen/xen3-auto-xen-drivers.diff
-	patches.xen/xen3-auto-include-xen-interface.diff
-
-	# kconfig bits for xen
-	patches.xen/xen3-auto-xen-kconfig.diff
-
-	# common code changes
-	patches.xen/xen3-auto-common.diff
-	patches.xen/xen3-auto-arch-x86.diff
-	patches.xen/xen3-auto-arch-i386.diff
-	patches.xen/xen3-auto-arch-x86_64.diff
-
-	# fixups due to upstream Xen parts
-	patches.xen/xen3-fixup-xen
-
-+needs_update-33	patches.xen/sfc-set-arch
-+needs_update-33	patches.xen/sfc-endianness
-
-	# newer changeset backports
-
-	# changes outside arch/{i386,x86_64}/xen
-	patches.xen/xen3-fixup-kconfig
-	patches.xen/xen3-fixup-common
-	patches.xen/xen3-fixup-arch-x86
-
-	# ports of other patches
-	patches.xen/xen3-patch-2.6.18
-	patches.xen/xen3-patch-2.6.19
-	patches.xen/xen3-patch-2.6.20
-	patches.xen/xen3-patch-2.6.21
-	patches.xen/xen3-patch-2.6.22
-	patches.xen/xen3-patch-2.6.23
-	patches.xen/xen3-patch-2.6.24
-	patches.xen/xen3-patch-2.6.25
-	patches.xen/xen3-patch-2.6.26
-	patches.xen/xen3-patch-2.6.27
-	patches.xen/xen3-patch-2.6.28
-	patches.xen/xen3-patch-2.6.29
-	patches.xen/xen3-patch-2.6.30
-	patches.xen/xen3-patch-2.6.31
-	patches.xen/xen3-patch-2.6.32
-	patches.xen/xen3-patch-2.6.33
-	patches.xen/xen3-patch-2.6.34
-	patches.xen/xen3-seccomp-disable-tsc-option
-	patches.xen/xen3-x86-mcp51-no-dac
-	patches.xen/xen3-x86-mark_rodata_rw.patch
-	patches.xen/xen3-acpi_processor_check_maxcpus.patch
-	patches.xen/xen3-kdb-x86
-	patches.xen/xen3-stack-unwind
-	patches.xen/xen3-x86_64-unwind-annotations
-	patches.xen/xen3-x86_cpufreq_make_trace_power_frequency_cpufreq_driver_independent.patch
-
-	# bugfixes and enhancements
-	patches.xen/xen-balloon-max-target
-	patches.xen/xen-modular-blktap
-	patches.xen/xen-blkback-bimodal-suse
-	patches.xen/xen-blkif-protocol-fallback-hack
-	patches.xen/xen-blkback-cdrom
-	patches.xen/xen-blktap-write-barriers
-	patches.xen/xen-op-packet
-	patches.xen/xen-blkfront-cdrom
-	patches.xen/xen-sections
-	patches.xen/xen-swiotlb-heuristics
-	patches.xen/xen-kconfig-compat
-	patches.xen/xen-cpufreq-report
-	patches.xen/xen-staging-build
-	patches.xen/xen-sysdev-suspend
-	patches.xen/xen-ipi-per-cpu-irq
-	patches.xen/xen-virq-per-cpu-irq
-	patches.xen/xen-clockevents
-	patches.xen/xen-no-reboot-vector
-	patches.xen/xen-spinlock-poll-early
-	patches.xen/xen-configurable-guest-devices
-	patches.xen/xen-netback-nr-irqs
-	patches.xen/xen-netback-notify-multi
-	patches.xen/xen-netback-generalize
-	patches.xen/xen-netback-multiple-tasklets
-	patches.xen/xen-netback-kernel-threads
-	patches.xen/xen-netfront-ethtool
-	patches.xen/xen-dcdbas
-	patches.xen/xen-floppy
-	patches.xen/xen-kzalloc
-	patches.xen/xen-unpriv-build
-	patches.xen/xen-x86-panic-no-reboot
-	patches.xen/xen-x86-dcr-fallback
-	patches.xen/xen-x86-consistent-nmi
-	patches.xen/xen-x86-no-lapic
-	patches.xen/xen-x86-pmd-handling
-	patches.xen/xen-x86-bigmem
-	patches.xen/xen-x86-machphys-prediction
-	patches.xen/xen-x86-exit-mmap
-	patches.xen/xen-x86-per-cpu-vcpu-info
-	patches.xen/xen-x86_64-pgd-pin
-	patches.xen/xen-x86_64-pgd-alloc-order
-	patches.xen/xen-x86_64-dump-user-pgt
-	patches.xen/xen-x86_64-note-init-p2m
++xen_needs_update	patches.xen/tmem
++xen_needs_update
++xen_needs_update	# bulk stuff, new files for xen
++xen_needs_update	patches.xen/xen3-auto-xen-arch.diff
++xen_needs_update	patches.xen/xen3-auto-xen-drivers.diff
++xen_needs_update	patches.xen/xen3-auto-include-xen-interface.diff
++xen_needs_update
++xen_needs_update	# kconfig bits for xen
++xen_needs_update	patches.xen/xen3-auto-xen-kconfig.diff
++xen_needs_update
++xen_needs_update	# common code changes
++xen_needs_update	patches.xen/xen3-auto-common.diff
++xen_needs_update	patches.xen/xen3-auto-arch-x86.diff
++xen_needs_update	patches.xen/xen3-auto-arch-i386.diff
++xen_needs_update	patches.xen/xen3-auto-arch-x86_64.diff
++xen_needs_update
++xen_needs_update	# fixups due to upstream Xen parts
++xen_needs_update	patches.xen/xen3-fixup-xen
++xen_needs_update
++xen_needs_update+needs_update-33	patches.xen/sfc-set-arch
++xen_needs_update+needs_update-33	patches.xen/sfc-endianness
++xen_needs_update
++xen_needs_update	# newer changeset backports
++xen_needs_update
++xen_needs_update	# changes outside arch/{i386,x86_64}/xen
++xen_needs_update	patches.xen/xen3-fixup-kconfig
++xen_needs_update	patches.xen/xen3-fixup-common
++xen_needs_update	patches.xen/xen3-fixup-arch-x86
++xen_needs_update
++xen_needs_update	# ports of other patches
++xen_needs_update	patches.xen/xen3-patch-2.6.18
++xen_needs_update	patches.xen/xen3-patch-2.6.19
++xen_needs_update	patches.xen/xen3-patch-2.6.20
++xen_needs_update	patches.xen/xen3-patch-2.6.21
++xen_needs_update	patches.xen/xen3-patch-2.6.22
++xen_needs_update	patches.xen/xen3-patch-2.6.23
++xen_needs_update	patches.xen/xen3-patch-2.6.24
++xen_needs_update	patches.xen/xen3-patch-2.6.25
++xen_needs_update	patches.xen/xen3-patch-2.6.26
++xen_needs_update	patches.xen/xen3-patch-2.6.27
++xen_needs_update	patches.xen/xen3-patch-2.6.28
++xen_needs_update	patches.xen/xen3-patch-2.6.29
++xen_needs_update	patches.xen/xen3-patch-2.6.30
++xen_needs_update	patches.xen/xen3-patch-2.6.31
++xen_needs_update	patches.xen/xen3-patch-2.6.32
++xen_needs_update	patches.xen/xen3-patch-2.6.33
++xen_needs_update	patches.xen/xen3-patch-2.6.34
++xen_needs_update	patches.xen/xen3-seccomp-disable-tsc-option
++xen_needs_update	patches.xen/xen3-x86-mcp51-no-dac
++xen_needs_update	patches.xen/xen3-x86-mark_rodata_rw.patch
++xen_needs_update	patches.xen/xen3-acpi_processor_check_maxcpus.patch
++xen_needs_update	patches.xen/xen3-kdb-x86
++xen_needs_update	patches.xen/xen3-stack-unwind
++xen_needs_update	patches.xen/xen3-x86_64-unwind-annotations
++xen_needs_update	patches.xen/xen3-x86_cpufreq_make_trace_power_frequency_cpufreq_driver_independent.patch
++xen_needs_update
++xen_needs_update	# bugfixes and enhancements
++xen_needs_update	patches.xen/xen-balloon-max-target
++xen_needs_update	patches.xen/xen-modular-blktap
++xen_needs_update	patches.xen/xen-blkback-bimodal-suse
++xen_needs_update	patches.xen/xen-blkif-protocol-fallback-hack
++xen_needs_update	patches.xen/xen-blkback-cdrom
++xen_needs_update	patches.xen/xen-blktap-write-barriers
++xen_needs_update	patches.xen/xen-op-packet
++xen_needs_update	patches.xen/xen-blkfront-cdrom
++xen_needs_update	patches.xen/xen-sections
++xen_needs_update	patches.xen/xen-swiotlb-heuristics
++xen_needs_update	patches.xen/xen-kconfig-compat
++xen_needs_update	patches.xen/xen-cpufreq-report
++xen_needs_update	patches.xen/xen-staging-build
++xen_needs_update	patches.xen/xen-sysdev-suspend
++xen_needs_update	patches.xen/xen-ipi-per-cpu-irq
++xen_needs_update	patches.xen/xen-virq-per-cpu-irq
++xen_needs_update	patches.xen/xen-clockevents
++xen_needs_update	patches.xen/xen-no-reboot-vector
++xen_needs_update	patches.xen/xen-spinlock-poll-early
++xen_needs_update	patches.xen/xen-configurable-guest-devices
++xen_needs_update	patches.xen/xen-netback-nr-irqs
++xen_needs_update	patches.xen/xen-netback-notify-multi
++xen_needs_update	patches.xen/xen-netback-generalize
++xen_needs_update	patches.xen/xen-netback-multiple-tasklets
++xen_needs_update	patches.xen/xen-netback-kernel-threads
++xen_needs_update	patches.xen/xen-netfront-ethtool
++xen_needs_update	patches.xen/xen-dcdbas
++xen_needs_update	patches.xen/xen-floppy
++xen_needs_update	patches.xen/xen-kzalloc
++xen_needs_update	patches.xen/xen-unpriv-build
++xen_needs_update	patches.xen/xen-x86-panic-no-reboot
++xen_needs_update	patches.xen/xen-x86-dcr-fallback
++xen_needs_update	patches.xen/xen-x86-consistent-nmi
++xen_needs_update	patches.xen/xen-x86-no-lapic
++xen_needs_update	patches.xen/xen-x86-pmd-handling
++xen_needs_update	patches.xen/xen-x86-bigmem
++xen_needs_update	patches.xen/xen-x86-machphys-prediction
++xen_needs_update	patches.xen/xen-x86-exit-mmap
++xen_needs_update	patches.xen/xen-x86-per-cpu-vcpu-info
++xen_needs_update	patches.xen/xen-x86_64-pgd-pin
++xen_needs_update	patches.xen/xen-x86_64-pgd-alloc-order
++xen_needs_update	patches.xen/xen-x86_64-dump-user-pgt
++xen_needs_update	patches.xen/xen-x86_64-note-init-p2m
