--- a/series.conf
+++ b/series.conf
@@ -28,6 +28,7 @@
 	# Send separate patches upstream if you find a problem...
 	########################################################
 	patches.kernel.org/patch-2.6.35-rc1
+	patches.kernel.org/patch-2.6.35-rc1-rc2
 
         ########################################################
         # Build fixes that apply to the vanilla kernel too.
