- patches.kernel.org/revert-tty-fix-a-little-bug-in-scrup-vt-c:   Revert "tty: fix a little bug in scrup, vt.c".

--- a/series.conf
+++ b/series.conf
@@ -29,6 +29,7 @@
 	########################################################
 	patches.kernel.org/patch-2.6.35-rc1
 	patches.kernel.org/patch-2.6.35-rc1-rc2
+	patches.kernel.org/revert-tty-fix-a-little-bug-in-scrup-vt-c
 
         ########################################################
         # Build fixes that apply to the vanilla kernel too.
