- supported.conf: Updated dependencies for 2.6.35

--- a/supported.conf
+++ b/supported.conf
@@ -158,6 +158,7 @@
 		kernel/drivers/acpi/video
 		kernel/drivers/acpi/wmi
 +base		kernel/drivers/ata/ahci
++base		kernel/drivers/ata/libahci
 		kernel/drivers/ata/ata_generic
 +base		kernel/drivers/ata/ata_piix				# SCSI low-level driver for Intel PIIX/ICH ATA controllers
 +base		kernel/drivers/ata/libata				# Library module for ATA devices
@@ -1592,6 +1593,7 @@
 +isa		kernel/drivers/pcmcia/i82365
 		kernel/drivers/pcmcia/pcmcia
 		kernel/drivers/pcmcia/pcmcia_core			# Linux Kernel Card Services
+		kernel/drivers/pcmcia/pcmcia_rsrc
 		kernel/drivers/pcmcia/pd6729				# Driver for the Cirrus PD6729 PCI-PCMCIA bridge
 		kernel/drivers/pcmcia/rsrc_nonstatic
 		kernel/drivers/pcmcia/tcic				# Databook TCIC-2 PCMCIA socket driver
@@ -1898,6 +1900,7 @@
 		kernel/drivers/usb/serial/symbolserial
 		kernel/drivers/usb/serial/ti_usb_3410_5052
 		kernel/drivers/usb/serial/usb_debug
+		kernel/drivers/usb/serial/usb_wwan
 		kernel/drivers/usb/serial/usbserial			# USB Serial Driver core
 		kernel/drivers/usb/serial/visor				# USB HandSpring Visor / Palm OS driver
 		kernel/drivers/usb/serial/whiteheat			# USB ConnectTech WhiteHEAT driver
@@ -2707,5 +2710,6 @@
 		kernel/sound/usb/caiaq/snd-usb-caiaq			# Native Instruments USB audio
 		kernel/sound/usb/snd-usb-audio				# USB Audio
 		kernel/sound/usb/snd-usb-lib				# USB Audio/MIDI helper module
+		kernel/sound/usb/snd-usbmidi-lib
 		kernel/sound/usb/usx2y/snd-usb-usx2y			# TASCAM US-X2Y Version 0.7.2
 -		kernel/sound/usb/usx2y/snd-usb-us122l
