- patches.rpmify/powerpc-kvm-build-failure-workaround: Refresh. - patches.rpmify/utrace-missing-kref_set: utrace: kref_set does   not exist. - patches.rpmify/wlags49-missing-strlen-include: wlags49_h2:   build fix.

--- a/series.conf
+++ b/series.conf
@@ -41,6 +41,8 @@
 
 	patches.rpmify/ppc-crashdump-typefix
 	patches.rpmify/powerpc-kvm-build-failure-workaround
+	patches.rpmify/utrace-missing-kref_set
+	patches.rpmify/wlags49-missing-strlen-include
 
         ########################################################
         # kABI consistency patches
