- patches.rpmify/ceph-atomic_long-init-fix: ceph: fix atomic64_t   initialization on ia64.

--- a/series.conf
+++ b/series.conf
@@ -42,6 +42,7 @@
 	patches.rpmify/ppc-crashdump-typefix
 	patches.rpmify/powerpc-kvm-build-failure-workaround
 	patches.rpmify/wlags49-missing-strlen-include
+	patches.rpmify/ceph-atomic_long-init-fix
 
         ########################################################
         # kABI consistency patches
