- patches.fixes/pci-hotplug-cpqphp-fix-crash.patch: PCI:   hotplug/cpqphp, fix NULL dereference (bnc#609338).

--- a/series.conf
+++ b/series.conf
@@ -542,6 +542,7 @@
 	# PCI and PCI hotplug
 	########################################################
 	patches.drivers/pci-disable-msi-on-K8M800
+	patches.fixes/pci-hotplug-cpqphp-fix-crash.patch
 
 	########################################################
 	# sysfs / driver core
