- Update to 2.6.35-rc3.   - Eliminated 1 patch.

--- a/series.conf
+++ b/series.conf
@@ -29,7 +29,7 @@
 	########################################################
 	patches.kernel.org/patch-2.6.35-rc1
 	patches.kernel.org/patch-2.6.35-rc1-rc2
-	patches.kernel.org/revert-tty-fix-a-little-bug-in-scrup-vt-c
+	patches.kernel.org/patch-2.6.35-rc2-rc3
 
         ########################################################
         # Build fixes that apply to the vanilla kernel too.
@@ -42,7 +42,6 @@
 	patches.rpmify/ppc-crashdump-typefix
 	patches.rpmify/powerpc-kvm-build-failure-workaround
 	patches.rpmify/wlags49-missing-strlen-include
-	patches.rpmify/ceph-atomic_long-init-fix
 
         ########################################################
         # kABI consistency patches
