- patches.drivers/libata-ata_generic-mcp89-mbp71:   ahci,ata_generic: let ata_generic handle new MBP w/ MCP89   (bko#15923).

--- a/series.conf
+++ b/series.conf
@@ -473,6 +473,7 @@
 	# libata
 	patches.drivers/libata-add-waits-for-govault
 	patches.drivers/libata-unlock-hpa-by-default
+	patches.drivers/libata-ata_generic-mcp89-mbp71
 
 	# Block layer fixes
 	patches.fixes/scsi-inquiry-too-short-ratelimit
