- rpm/kernel-binary.spec.in: Require a mkinitrd that supports   KMS (bnc#615680).

--- a/rpm/kernel-binary.spec.in
+++ b/rpm/kernel-binary.spec.in
@@ -85,7 +85,11 @@ Requires(post): module-init-tools >= 3.4
 # packages to install/update. Likewise, this is true for mkinitrd.
 # Need a perl-Bootloader with /usr/lib/bootloader/bootloader_entry
 Requires(post): perl-Bootloader >= 0.4.15
+%if 0%{?suse_version} >= 1130
+Requires(post): mkinitrd >= 2.6.0
+%else
 Requires(post): mkinitrd
+%endif
 #!BuildIgnore:  perl-Bootloader mkinitrd
 
 %ifarch ia64
