- patches.suse/dm-raid45-26-Nov-2009.patch: DMRAID45 module   (bnc#615906, bnc#565962). - patches.suse/dm-raid45_2.6.27_20081027.patch: Delete. - Sync dm-raid45 to the later version.

--- a/series.conf
+++ b/series.conf
@@ -599,7 +599,7 @@
 	# device-mapper
 	########################################################
 	patches.suse/dm-emulate-blkrrpart-ioctl
-	patches.suse/dm-raid45_2.6.27_20081027.patch
+	patches.suse/dm-raid45-26-Nov-2009.patch
 	patches.suse/dmraid45-dm_dirty_log_create-api-fix
 	patches.suse/dmraid45-dm_get_device-takes-fewer-arguments
 	patches.fixes/dm-mpath-reattach-dh
