- patches.drivers/libata-ata_generic-force_dma: ata_generic:   implement ATA_GEN_* flags and force enable DMA on MBP 7,1   (bko#15923).

--- a/series.conf
+++ b/series.conf
@@ -466,6 +466,7 @@
 	# libata
 	patches.drivers/libata-unlock-hpa-by-default
 	patches.drivers/libata-ata_generic-mcp89-mbp71
+	patches.drivers/libata-ata_generic-force_dma
 
 	# Block layer fixes
 	patches.fixes/scsi-inquiry-too-short-ratelimit
