- patches.fixes/blkdev-generalize-flags-for-blkdev_issue_fn-functions:   blkdev: generalize flags for blkdev_issue_fn functions.

--- a/series.conf
+++ b/series.conf
@@ -353,6 +353,11 @@
 	########################################################
 
 	########################################################
+	# btrfs
+	########################################################
+	patches.fixes/blkdev-generalize-flags-for-blkdev_issue_fn-functions
+
+	########################################################
 	# Reiserfs Patches
 	########################################################
 	patches.suse/reiserfs-barrier-default
