--- a/series.conf
+++ b/series.conf
@@ -356,6 +356,7 @@
 	# btrfs
 	########################################################
 	patches.fixes/blkdev-generalize-flags-for-blkdev_issue_fn-functions
+	patches.fixes/nilfs-fix-breakage-caused-by-barrier-flag-changes
 
 	########################################################
 	# Reiserfs Patches
