--- a/series.conf
+++ b/series.conf
@@ -358,6 +358,7 @@
 	patches.fixes/blkdev-generalize-flags-for-blkdev_issue_fn-functions
 	patches.fixes/nilfs-fix-breakage-caused-by-barrier-flag-changes
 	patches.fixes/btrfs-link-block-groups-of-different-raid-types
+	patches.fixes/btrfs-kill-allocate_wait-in-space_info
 
 	########################################################
 	# Reiserfs Patches
