- patches.fixes/btrfs-link-block-groups-of-different-raid-types:   Btrfs: Link block groups of different raid types.

--- a/series.conf
+++ b/series.conf
@@ -357,6 +357,7 @@
 	########################################################
 	patches.fixes/blkdev-generalize-flags-for-blkdev_issue_fn-functions
 	patches.fixes/nilfs-fix-breakage-caused-by-barrier-flag-changes
+	patches.fixes/btrfs-link-block-groups-of-different-raid-types
 
 	########################################################
 	# Reiserfs Patches
