--- a/series.conf
+++ b/series.conf
@@ -359,6 +359,7 @@
 	patches.fixes/nilfs-fix-breakage-caused-by-barrier-flag-changes
 	patches.fixes/btrfs-link-block-groups-of-different-raid-types
 	patches.fixes/btrfs-kill-allocate_wait-in-space_info
+	patches.fixes/btrfs-shrink-delay-allocated-space-in-a-synchronized
 
 	########################################################
 	# Reiserfs Patches
