--- a/series.conf
+++ b/series.conf
@@ -362,6 +362,7 @@
 	patches.fixes/btrfs-shrink-delay-allocated-space-in-a-synchronized
 	patches.fixes/btrfs-kill-init_btrfs_i
 	patches.fixes/btrfs-introduce-contexts-for-metadata-reservation
+	patches.fixes/btrfs-integrate-metadata-reservation-with-start_transaction
 
 	########################################################
 	# Reiserfs Patches
