- patches.fixes/btrfs-introduce-contexts-for-metadata-reservation:   Btrfs: Introduce contexts for metadata reservation.

--- a/series.conf
+++ b/series.conf
@@ -361,6 +361,7 @@
 	patches.fixes/btrfs-kill-allocate_wait-in-space_info
 	patches.fixes/btrfs-shrink-delay-allocated-space-in-a-synchronized
 	patches.fixes/btrfs-kill-init_btrfs_i
+	patches.fixes/btrfs-introduce-contexts-for-metadata-reservation
 
 	########################################################
 	# Reiserfs Patches
