- patches.fixes/btrfs-update-metadata-reservation-for-delayed-allocation:   Btrfs: Update metadata reservation for delayed allocation.

--- a/series.conf
+++ b/series.conf
@@ -363,6 +363,7 @@
 	patches.fixes/btrfs-kill-init_btrfs_i
 	patches.fixes/btrfs-introduce-contexts-for-metadata-reservation
 	patches.fixes/btrfs-integrate-metadata-reservation-with-start_transaction
+	patches.fixes/btrfs-update-metadata-reservation-for-delayed-allocation
 
 	########################################################
 	# Reiserfs Patches
